yapl/yapl_old.output
Terminals unused in grammar

    TER_OP


State 27 conflicts: 1 shift/reduce
State 341 conflicts: 1 shift/reduce
State 463 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression
   59                      | relational_expression TH_OP shift_expression

   60 equality_expression: relational_expression
   61                    | equality_expression EQ_OP relational_expression
   62                    | equality_expression NE_OP relational_expression

   63 and_expression: equality_expression
   64               | and_expression '&' equality_expression

   65 exclusive_or_expression: and_expression
   66                        | exclusive_or_expression '^' and_expression

   67 inclusive_or_expression: exclusive_or_expression
   68                        | inclusive_or_expression '|' exclusive_or_expression

   69 logical_and_expression: inclusive_or_expression
   70                       | logical_and_expression AND_OP inclusive_or_expression

   71 logical_or_expression: logical_and_expression
   72                      | logical_or_expression OR_OP logical_and_expression

   73 conditional_expression: logical_or_expression
   74                       | logical_or_expression '?' expression ':' conditional_expression

   75 assignment_expression: conditional_expression
   76                      | unary_expression assignment_operator assignment_expression

   77 assignment_operator: '='
   78                    | MUL_ASSIGN
   79                    | DIV_ASSIGN
   80                    | MOD_ASSIGN
   81                    | ADD_ASSIGN
   82                    | SUB_ASSIGN
   83                    | LEFT_ASSIGN
   84                    | RIGHT_ASSIGN
   85                    | AND_ASSIGN
   86                    | XOR_ASSIGN
   87                    | OR_ASSIGN
   88                    | PEQ_OP
   89                    | MEQ_OP
   90                    | STREQ_OP
   91                    | DEQ_OP
   92                    | MODEQ_OP

   93 expression: assignment_expression
   94           | expression ',' assignment_expression

   95 constant_expression: conditional_expression

   96 declaration: declaration_specifiers ';'
   97            | declaration_specifiers init_declarator_list ';'
   98            | static_assert_declaration

   99 declaration_specifiers: storage_class_specifier declaration_specifiers
  100                       | storage_class_specifier
  101                       | type_specifier declaration_specifiers
  102                       | type_specifier
  103                       | type_qualifier declaration_specifiers
  104                       | type_qualifier
  105                       | function_specifier declaration_specifiers
  106                       | function_specifier
  107                       | alignment_specifier declaration_specifiers
  108                       | alignment_specifier

  109 init_declarator_list: init_declarator
  110                     | init_declarator_list ',' init_declarator

  111 init_declarator: declarator '=' initializer
  112                | declarator

  113 storage_class_specifier: TYPEDEF
  114                        | EXTERN
  115                        | STATIC
  116                        | THREAD_LOCAL
  117                        | AUTO
  118                        | REGISTER

  119 type_specifier: VOID
  120               | CHAR
  121               | SHORT
  122               | INT
  123               | LONG
  124               | FLOAT
  125               | DOUBLE
  126               | SIGNED
  127               | UNSIGNED
  128               | BOOL
  129               | COMPLEX
  130               | IMAGINARY
  131               | atomic_type_specifier
  132               | struct_or_union_specifier
  133               | enum_specifier
  134               | TYPEDEF_NAME

  135 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  136                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  137                          | struct_or_union IDENTIFIER

  138 struct_or_union: STRUCT
  139                | UNION

  140 struct_declaration_list: struct_declaration
  141                        | struct_declaration_list struct_declaration

  142 struct_declaration: specifier_qualifier_list ';'
  143                   | specifier_qualifier_list struct_declarator_list ';'
  144                   | static_assert_declaration

  145 specifier_qualifier_list: type_specifier specifier_qualifier_list
  146                         | type_specifier
  147                         | type_qualifier specifier_qualifier_list
  148                         | type_qualifier

  149 struct_declarator_list: struct_declarator
  150                       | struct_declarator_list ',' struct_declarator

  151 struct_declarator: ':' constant_expression
  152                  | declarator ':' constant_expression
  153                  | declarator

  154 enum_specifier: ENUM '{' enumerator_list '}'
  155               | ENUM '{' enumerator_list ',' '}'
  156               | ENUM IDENTIFIER '{' enumerator_list '}'
  157               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  158               | ENUM IDENTIFIER

  159 enumerator_list: enumerator
  160                | enumerator_list ',' enumerator

  161 enumerator: enumeration_constant '=' constant_expression
  162           | enumeration_constant

  163 atomic_type_specifier: ATOMIC '(' type_name ')'

  164 type_qualifier: CONST
  165               | RESTRICT
  166               | VOLATILE
  167               | ATOMIC

  168 function_specifier: INLINE
  169                   | NORETURN

  170 alignment_specifier: ALIGNAS '(' type_name ')'
  171                    | ALIGNAS '(' constant_expression ')'

  172 $@1: ε

  173 declarator: pointer $@1 direct_declarator
  174           | direct_declarator

  175 direct_declarator: IDENTIFIER
  176                  | '(' declarator ')'
  177                  | direct_declarator '[' ']'
  178                  | direct_declarator '[' '*' ']'
  179                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  180                  | direct_declarator '[' STATIC assignment_expression ']'
  181                  | direct_declarator '[' type_qualifier_list '*' ']'
  182                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  183                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  184                  | direct_declarator '[' type_qualifier_list ']'
  185                  | direct_declarator '[' assignment_expression ']'
  186                  | direct_declarator '(' parameter_type_list ')'
  187                  | direct_declarator '(' ')'
  188                  | direct_declarator '(' identifier_list ')'

  189 pointer: '*' type_qualifier_list pointer
  190        | '*' type_qualifier_list
  191        | '*' pointer
  192        | '*'

  193 type_qualifier_list: type_qualifier
  194                    | type_qualifier_list type_qualifier

  195 parameter_type_list: parameter_list ',' ELLIPSIS
  196                    | parameter_list

  197 parameter_list: parameter_declaration
  198               | parameter_list ',' parameter_declaration

  199 parameter_declaration: declaration_specifiers declarator
  200                      | declaration_specifiers abstract_declarator
  201                      | declaration_specifiers

  202 identifier_list: IDENTIFIER
  203                | identifier_list ',' IDENTIFIER

  204 type_name: specifier_qualifier_list abstract_declarator
  205          | specifier_qualifier_list

  206 abstract_declarator: pointer direct_abstract_declarator
  207                    | pointer
  208                    | direct_abstract_declarator

  209 direct_abstract_declarator: '(' abstract_declarator ')'
  210                           | '[' ']'
  211                           | '[' '*' ']'
  212                           | '[' STATIC type_qualifier_list assignment_expression ']'
  213                           | '[' STATIC assignment_expression ']'
  214                           | '[' type_qualifier_list STATIC assignment_expression ']'
  215                           | '[' type_qualifier_list assignment_expression ']'
  216                           | '[' type_qualifier_list ']'
  217                           | '[' assignment_expression ']'
  218                           | direct_abstract_declarator '[' ']'
  219                           | direct_abstract_declarator '[' '*' ']'
  220                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  221                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  222                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  223                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  224                           | direct_abstract_declarator '[' type_qualifier_list ']'
  225                           | direct_abstract_declarator '[' assignment_expression ']'
  226                           | '(' ')'
  227                           | '(' parameter_type_list ')'
  228                           | direct_abstract_declarator '(' ')'
  229                           | direct_abstract_declarator '(' parameter_type_list ')'

  230 initializer: '{' initializer_list '}'
  231            | '{' initializer_list ',' '}'
  232            | assignment_expression

  233 initializer_list: designation initializer
  234                 | initializer
  235                 | initializer_list ',' designation initializer
  236                 | initializer_list ',' initializer

  237 designation: designator_list '='

  238 designator_list: designator
  239                | designator_list designator

  240 designator: '[' constant_expression ']'
  241           | '.' IDENTIFIER

  242 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  243 statement: labeled_statement
  244          | compound_statement
  245          | expression_statement
  246          | selection_statement
  247          | iteration_statement
  248          | jump_statement

  249 labeled_statement: IDENTIFIER ':' statement
  250                  | CASE constant_expression ':' statement
  251                  | DEFAULT ':' statement

  252 compound_statement: '{' '}'
  253                   | '{' block_item_list '}'

  254 block_item_list: block_item
  255                | block_item_list block_item

  256 block_item: declaration
  257           | statement

  258 expression_statement: ';'
  259                     | expression ';'

  260 $@2: ε

  261 selection_statement: IF '(' expression ')' statement ELSE $@2 statement
  262                    | IF '(' expression ')' statement
  263                    | SWITCH '(' expression ')' statement

  264 iteration_statement: WHILE '(' expression ')' statement
  265                    | DO statement WHILE '(' expression ')' ';'
  266                    | FOR '(' expression_statement expression_statement ')' statement
  267                    | FOR '(' expression_statement expression_statement expression ')' statement
  268                    | FOR '(' declaration expression_statement ')' statement
  269                    | FOR '(' declaration expression_statement expression ')' statement

  270 jump_statement: GOTO IDENTIFIER ';'
  271               | CONTINUE ';'
  272               | BREAK ';'
  273               | RETURN ';'
  274               | RETURN expression ';'

  275 translation_unit: external_declaration
  276                 | translation_unit external_declaration

  277 external_declaration: function_definition
  278                     | declaration

  279 function_definition: declaration_specifiers declarator declaration_list compound_statement
  280                    | declaration_specifiers declarator compound_statement

  281 declaration_list: declaration
  282                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 41
    '%' (37) 47
    '&' (38) 36 64
    '(' (40) 4 12 19 20 25 26 34 35 43 163 170 171 176 186 187 188 209 226 227 228 229 242 261 262 263 264 265 266 267 268 269
    ')' (41) 4 12 19 20 25 26 34 35 43 163 170 171 176 186 187 188 209 226 227 228 229 242 261 262 263 264 265 266 267 268 269
    '*' (42) 37 45 178 181 189 190 191 192 211 219
    '+' (43) 38 49
    ',' (44) 12 14 26 28 94 110 150 155 157 160 195 198 203 231 235 236 242
    '-' (45) 39 50
    '.' (46) 21 241
    '/' (47) 46
    ':' (58) 15 16 74 151 152 249 250 251
    ';' (59) 96 97 142 143 242 258 259 265 270 271 272 273 274
    '<' (60) 55
    '=' (61) 77 111 161 237
    '>' (62) 56
    '?' (63) 74
    '[' (91) 18 177 178 179 180 181 182 183 184 185 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 240
    ']' (93) 18 177 178 179 180 181 182 183 184 185 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 240
    '^' (94) 66
    '{' (123) 25 26 135 136 154 155 156 157 230 231 252 253
    '|' (124) 68
    '}' (125) 25 26 135 136 154 155 156 157 230 231 252 253
    '~' (126) 40
    error (256)
    IDENTIFIER (258) 1 9 21 22 136 137 156 157 158 175 202 203 241 249 270
    I_CONSTANT (259) 6
    F_CONSTANT (260) 7
    STRING_LITERAL (261) 10 242
    FUNC_NAME (262) 11
    SIZEOF (263) 33 34
    PTR_OP (264) 22
    INC_OP (265) 23 30
    DEC_OP (266) 24 31
    LEFT_OP (267) 52
    RIGHT_OP (268) 53
    LE_OP (269) 57
    GE_OP (270) 58
    EQ_OP (271) 61
    NE_OP (272) 62
    TH_OP (273) 59
    PEQ_OP (274) 88
    MEQ_OP (275) 89
    STREQ_OP (276) 90
    DEQ_OP (277) 91
    MODEQ_OP (278) 92
    TER_OP (279)
    AND_OP (280) 70
    OR_OP (281) 72
    MUL_ASSIGN (282) 78
    DIV_ASSIGN (283) 79
    MOD_ASSIGN (284) 80
    ADD_ASSIGN (285) 81
    SUB_ASSIGN (286) 82
    LEFT_ASSIGN (287) 83
    RIGHT_ASSIGN (288) 84
    AND_ASSIGN (289) 85
    XOR_ASSIGN (290) 86
    OR_ASSIGN (291) 87
    TYPEDEF_NAME (292) 134
    ENUMERATION_CONSTANT (293) 8
    TYPEDEF (294) 113
    EXTERN (295) 114
    STATIC (296) 115 179 180 182 212 213 214 220 221 223
    AUTO (297) 117
    REGISTER (298) 118
    INLINE (299) 168
    CONST (300) 164
    RESTRICT (301) 165
    VOLATILE (302) 166
    BOOL (303) 128
    CHAR (304) 120
    SHORT (305) 121
    INT (306) 122
    LONG (307) 123
    SIGNED (308) 126
    UNSIGNED (309) 127
    FLOAT (310) 124
    DOUBLE (311) 125
    VOID (312) 119
    COMPLEX (313) 129
    IMAGINARY (314) 130
    STRUCT (315) 138
    UNION (316) 139
    ENUM (317) 154 155 156 157 158
    ELLIPSIS (318) 195
    CASE (319) 250
    DEFAULT (320) 16 251
    IF <val> (321) 261 262
    ELSE <val> (322) 261
    SWITCH (323) 263
    WHILE (324) 264 265
    DO (325) 265
    FOR (326) 266 267 268 269
    GOTO (327) 270
    CONTINUE (328) 271
    BREAK (329) 272
    RETURN (330) 273 274
    ALIGNAS (331) 170 171
    ALIGNOF (332) 35
    ATOMIC (333) 163 167
    GENERIC (334) 12
    NORETURN (335) 169
    STATIC_ASSERT (336) 242
    THREAD_LOCAL (337) 116


Nonterminals, with rules where they appear

    $accept (107)
        on left: 0
    primary_expression (108)
        on left: 1 2 3 4 5
        on right: 17
    constant (109)
        on left: 6 7 8
        on right: 2
    enumeration_constant (110)
        on left: 9
        on right: 161 162
    string (111)
        on left: 10 11
        on right: 3
    generic_selection (112)
        on left: 12
        on right: 5
    generic_assoc_list (113)
        on left: 13 14
        on right: 12 14
    generic_association (114)
        on left: 15 16
        on right: 13 14
    postfix_expression (115)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 18 19 20 21 22 23 24 29
    argument_expression_list (116)
        on left: 27 28
        on right: 20 28
    unary_expression (117)
        on left: 29 30 31 32 33 34 35
        on right: 30 31 33 42 76
    unary_operator (118)
        on left: 36 37 38 39 40 41
        on right: 32
    cast_expression (119)
        on left: 42 43
        on right: 32 43 44 45 46 47
    multiplicative_expression (120)
        on left: 44 45 46 47
        on right: 45 46 47 48 49 50
    additive_expression (121)
        on left: 48 49 50
        on right: 49 50 51 52 53
    shift_expression (122)
        on left: 51 52 53
        on right: 52 53 54 55 56 57 58 59
    relational_expression (123)
        on left: 54 55 56 57 58 59
        on right: 55 56 57 58 59 60 61 62
    equality_expression (124)
        on left: 60 61 62
        on right: 61 62 63 64
    and_expression (125)
        on left: 63 64
        on right: 64 65 66
    exclusive_or_expression (126)
        on left: 65 66
        on right: 66 67 68
    inclusive_or_expression (127)
        on left: 67 68
        on right: 68 69 70
    logical_and_expression (128)
        on left: 69 70
        on right: 70 71 72
    logical_or_expression (129)
        on left: 71 72
        on right: 72 73 74
    conditional_expression (130)
        on left: 73 74
        on right: 74 75 95
    assignment_expression (131)
        on left: 75 76
        on right: 12 15 16 27 28 76 93 94 179 180 182 183 185 212 213 214 215 217 220 221 222 223 225 232
    assignment_operator (132)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 76
    expression (133)
        on left: 93 94
        on right: 4 18 74 94 259 261 262 263 264 265 267 269 274
    constant_expression (134)
        on left: 95
        on right: 151 152 161 171 240 242 250
    declaration (135)
        on left: 96 97 98
        on right: 256 268 269 278 281 282
    declaration_specifiers (136)
        on left: 99 100 101 102 103 104 105 106 107 108
        on right: 96 97 99 101 103 105 107 199 200 201 279 280
    init_declarator_list (137)
        on left: 109 110
        on right: 97 110
    init_declarator (138)
        on left: 111 112
        on right: 109 110
    storage_class_specifier (139)
        on left: 113 114 115 116 117 118
        on right: 99 100
    type_specifier (140)
        on left: 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134
        on right: 101 102 145 146
    struct_or_union_specifier (141)
        on left: 135 136 137
        on right: 132
    struct_or_union (142)
        on left: 138 139
        on right: 135 136 137
    struct_declaration_list (143)
        on left: 140 141
        on right: 135 136 141
    struct_declaration (144)
        on left: 142 143 144
        on right: 140 141
    specifier_qualifier_list (145)
        on left: 145 146 147 148
        on right: 142 143 145 147 204 205
    struct_declarator_list (146)
        on left: 149 150
        on right: 143 150
    struct_declarator (147)
        on left: 151 152 153
        on right: 149 150
    enum_specifier (148)
        on left: 154 155 156 157 158
        on right: 133
    enumerator_list (149)
        on left: 159 160
        on right: 154 155 156 157 160
    enumerator (150)
        on left: 161 162
        on right: 159 160
    atomic_type_specifier (151)
        on left: 163
        on right: 131
    type_qualifier (152)
        on left: 164 165 166 167
        on right: 103 104 147 148 193 194
    function_specifier (153)
        on left: 168 169
        on right: 105 106
    alignment_specifier (154)
        on left: 170 171
        on right: 107 108
    declarator (155)
        on left: 173 174
        on right: 111 112 152 153 176 199 279 280
    $@1 (156)
        on left: 172
        on right: 173
    direct_declarator (157)
        on left: 175 176 177 178 179 180 181 182 183 184 185 186 187 188
        on right: 173 174 177 178 179 180 181 182 183 184 185 186 187 188
    pointer (158)
        on left: 189 190 191 192
        on right: 173 189 191 206 207
    type_qualifier_list (159)
        on left: 193 194
        on right: 179 181 182 183 184 189 190 194 212 214 215 216 220 222 223 224
    parameter_type_list (160)
        on left: 195 196
        on right: 186 227 229
    parameter_list (161)
        on left: 197 198
        on right: 195 196 198
    parameter_declaration (162)
        on left: 199 200 201
        on right: 197 198
    identifier_list (163)
        on left: 202 203
        on right: 188 203
    type_name (164)
        on left: 204 205
        on right: 15 25 26 34 35 43 163 170
    abstract_declarator (165)
        on left: 206 207 208
        on right: 200 204 209
    direct_abstract_declarator (166)
        on left: 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229
        on right: 206 208 218 219 220 221 222 223 224 225 228 229
    initializer (167)
        on left: 230 231 232
        on right: 111 233 234 235 236
    initializer_list (168)
        on left: 233 234 235 236
        on right: 25 26 230 231 235 236
    designation (169)
        on left: 237
        on right: 233 235
    designator_list (170)
        on left: 238 239
        on right: 237 239
    designator (171)
        on left: 240 241
        on right: 238 239
    static_assert_declaration (172)
        on left: 242
        on right: 98 144
    statement (173)
        on left: 243 244 245 246 247 248
        on right: 249 250 251 257 261 262 263 264 265 266 267 268 269
    labeled_statement (174)
        on left: 249 250 251
        on right: 243
    compound_statement (175)
        on left: 252 253
        on right: 244 279 280
    block_item_list (176)
        on left: 254 255
        on right: 253 255
    block_item (177)
        on left: 256 257
        on right: 254 255
    expression_statement (178)
        on left: 258 259
        on right: 245 266 267 268 269
    selection_statement (179)
        on left: 261 262 263
        on right: 246
    $@2 (180)
        on left: 260
        on right: 261
    iteration_statement (181)
        on left: 264 265 266 267 268 269
        on right: 247
    jump_statement (182)
        on left: 270 271 272 273 274
        on right: 248
    translation_unit (183)
        on left: 275 276
        on right: 0 276
    external_declaration (184)
        on left: 277 278
        on right: 275 276
    function_definition (185)
        on left: 279 280
        on right: 277
    declaration_list (186)
        on left: 281 282
        on right: 279 282


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  134 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 134 (type_specifier)


State 2

  113 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 113 (storage_class_specifier)


State 3

  114 storage_class_specifier: EXTERN •

    $default  reduce using rule 114 (storage_class_specifier)


State 4

  115 storage_class_specifier: STATIC •

    $default  reduce using rule 115 (storage_class_specifier)


State 5

  117 storage_class_specifier: AUTO •

    $default  reduce using rule 117 (storage_class_specifier)


State 6

  118 storage_class_specifier: REGISTER •

    $default  reduce using rule 118 (storage_class_specifier)


State 7

  168 function_specifier: INLINE •

    $default  reduce using rule 168 (function_specifier)


State 8

  164 type_qualifier: CONST •

    $default  reduce using rule 164 (type_qualifier)


State 9

  165 type_qualifier: RESTRICT •

    $default  reduce using rule 165 (type_qualifier)


State 10

  166 type_qualifier: VOLATILE •

    $default  reduce using rule 166 (type_qualifier)


State 11

  128 type_specifier: BOOL •

    $default  reduce using rule 128 (type_specifier)


State 12

  120 type_specifier: CHAR •

    $default  reduce using rule 120 (type_specifier)


State 13

  121 type_specifier: SHORT •

    $default  reduce using rule 121 (type_specifier)


State 14

  122 type_specifier: INT •

    $default  reduce using rule 122 (type_specifier)


State 15

  123 type_specifier: LONG •

    $default  reduce using rule 123 (type_specifier)


State 16

  126 type_specifier: SIGNED •

    $default  reduce using rule 126 (type_specifier)


State 17

  127 type_specifier: UNSIGNED •

    $default  reduce using rule 127 (type_specifier)


State 18

  124 type_specifier: FLOAT •

    $default  reduce using rule 124 (type_specifier)


State 19

  125 type_specifier: DOUBLE •

    $default  reduce using rule 125 (type_specifier)


State 20

  119 type_specifier: VOID •

    $default  reduce using rule 119 (type_specifier)


State 21

  129 type_specifier: COMPLEX •

    $default  reduce using rule 129 (type_specifier)


State 22

  130 type_specifier: IMAGINARY •

    $default  reduce using rule 130 (type_specifier)


State 23

  138 struct_or_union: STRUCT •

    $default  reduce using rule 138 (struct_or_union)


State 24

  139 struct_or_union: UNION •

    $default  reduce using rule 139 (struct_or_union)


State 25

  154 enum_specifier: ENUM • '{' enumerator_list '}'
  155               | ENUM • '{' enumerator_list ',' '}'
  156               | ENUM • IDENTIFIER '{' enumerator_list '}'
  157               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  158               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  170 alignment_specifier: ALIGNAS • '(' type_name ')'
  171                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  163 atomic_type_specifier: ATOMIC • '(' type_name ')'
  167 type_qualifier: ATOMIC •

    '('  shift, and go to state 49

    '('       [reduce using rule 167 (type_qualifier)]
    $default  reduce using rule 167 (type_qualifier)

    shift/reduce conflict on token '(':
      167 type_qualifier: ATOMIC •
      163 atomic_type_specifier: ATOMIC • '(' type_name ')'
      First example: ATOMIC • '(' type_name ')' declaration_specifiers ';' $end
      Shift derivation
        $accept
        ↳ 0: translation_unit                                                                               $end
             ↳ 275: external_declaration
                    ↳ 278: declaration
                           ↳ 96: declaration_specifiers                                                 ';'
                                 ↳ 101: type_specifier                           declaration_specifiers
                                        ↳ 131: atomic_type_specifier
                                               ↳ 163: ATOMIC • '(' type_name ')'
      Second example: ATOMIC • '(' declarator ')' declaration_list compound_statement $end
      Reduce derivation
        $accept
        ↳ 0: translation_unit                                                                                                 $end
             ↳ 275: external_declaration
                    ↳ 277: function_definition
                           ↳ 279: declaration_specifiers declarator                       declaration_list compound_statement
                                  ↳ 104: type_qualifier  ↳ 174: direct_declarator
                                         ↳ 167: ATOMIC •        ↳ 176: '(' declarator ')'



State 28

  169 function_specifier: NORETURN •

    $default  reduce using rule 169 (function_specifier)


State 29

  242 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  116 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 116 (storage_class_specifier)


State 31

  278 external_declaration: declaration •

    $default  reduce using rule 278 (external_declaration)


State 32

   96 declaration: declaration_specifiers • ';'
   97            | declaration_specifiers • init_declarator_list ';'
  279 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  280                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


State 33

   99 declaration_specifiers: storage_class_specifier • declaration_specifiers
  100                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 100 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 34

  101 declaration_specifiers: type_specifier • declaration_specifiers
  102                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 102 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 35

  132 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 132 (type_specifier)


State 36

  135 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  136                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  137                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


State 37

  133 type_specifier: enum_specifier •

    $default  reduce using rule 133 (type_specifier)


State 38

  131 type_specifier: atomic_type_specifier •

    $default  reduce using rule 131 (type_specifier)


State 39

  103 declaration_specifiers: type_qualifier • declaration_specifiers
  104                       | type_qualifier •
